--- a/assets/styles.css
+++ b/assets/styles.css
@@ -51,7 +51,16 @@ input[type="text"] {
   border-radius: 5px;
 }
 
-.forecast h3 {
+#clear-history {
+  padding: 5px;
+  background-color: #21d2fe;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#forecast h3 {
   color: #4f59c0;
   font-size: 2.5em;
   margin-bottom: 10px;
@@ -69,12 +78,12 @@ input[type="text"] {
   text-align: center;
 }
 
-.forecast-container {
+#forecast-container {
   display: flex;
   flex-direction: row;
 }
 
-.search-display {
+#search-display {
   display: flex;
   flex-direction: row;
   margin-bottom: 20px;
