--- a/assets/styles.css
+++ b/assets/styles.css
@@ -89,3 +89,10 @@ input[type="text"] {
   margin-bottom: 20px;
   justify-content: center;
 }
+
+#current-weather {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  justify-content: center;
+}
